# solana-nextjs-template

./: README.md  package.json
client/: package.json
client/actions/: initialInstruction.ts  stateInstruction.ts
client/components/: InitialInstructionComponent.tsx  StateInstructionComponent.tsx
client/components/layout/: Header.tsx  Layout.tsx
client/contexts/: ClientWalletProvider.tsx
client/pages/: _app.tsx  index.tsx
client/schemas/: accountdata.ts  state.ts
client/utils/: instruction_tags.ts  program.ts
programs/: .gitignore  Cargo.toml
programs/src/: error.rs  instruction.rs  processor.rs  state.rs
