[package]
name = "solana-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.10.19"
thiserror = "1.0.24"

[dev-dependencies]
solana-program-test = "~1.10.19"
solana-sdk = "~1.10.19"

[lib]
name = "program"
crate-type = ["cdylib", "lib"]
